Add FXOS stuff; missed in previos commit

--- a/configure.ac
+++ b/configure.ac
@@ -510,6 +510,7 @@ AC_CONFIG_FILES(bin/f5rancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/f10rancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/flogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/fnlogin bin/fnrancid, [chmod a+x $ac_file])
+AC_CONFIG_FILES(bin/fxlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/hlogin, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/htlogin bin/htrancid, [chmod a+x $ac_file])
 AC_CONFIG_FILES(bin/jlogin bin/jerancid, [chmod a+x $ac_file])
