ciscowlc: skip new oscillating o/p for WLC 8.8 - Reuden Farrelly
Memory Current Usage............................. 55
Memory Average Usage............................. 55
CPU Current Usage................................ 0
CPU Average Usage................................ 0

--- a/lib/ciscowlc.pm.in
+++ b/lib/ciscowlc.pm.in
@@ -150,6 +150,7 @@ sub ShowSysinfo {
 	if (/^fan status/i) { $skipprocess = 1; }
 	if (/^Number of Active Clients/) { $skipprocess = 1; }
 	if (/^OUI Classification Failure Count/) { $skipprocess = 1; }
+	if (/^(memory|cpu) (current|average)/i) { $skipprocess = 1; }
 	if (/^(internal|external) temperature/i) { $skipprocess=1; }
 	if (/rpm$/) { $skipprocess = 1; }
 
