--- a/rancid/lib/ios.pm.in
+++ b/rancid/lib/ios.pm.in
@@ -1100,11 +1100,6 @@ sub DirSlotN {
 	# on dual RP ASR systems
 	next if (/\.issu_loc_lock\s*$/);
 
-	# XXX
-	if ($ios eq "XE" && /^((\s+)?\d+\s+\S+)\s+\d+.*(tracelogs|throughput_monitor_params)$/) {
-	    $_ = "$1" . sprintf("%43s", "") . "$3\n";
-	}
-
 	# filter frequently changing files (dhcp & vlan database)
 	# change from:
 	#    9  -rw-         660  Jan 15 2011 20:43:54 vlan.dat
@@ -1112,7 +1107,8 @@ sub DirSlotN {
 	# to:
 	#       -rw-                                   vlan.dat
 	#       -rw-                                           vlan.dat
-	if (/(dhcp_[^. ]*\.txt|vlan\.dat|sflog|snooping|syslog|underlying-config)\s*$/) {
+	if (/(dhcp_[^. ]*\.txt|vlan\.dat|sflog|snooping|syslog)\s*$/ ||
+	    /(tracelogs|throughput_monitor_params|underlying-config)\s*$/) {
 	    if (/(\s*\d+)(\s+\S+\s+)(\d+)(\s+)(\w+ \d+\s+\d+ \d+:\d+:\d+ .\d+:\d+)/) {
 		my($fn, $a, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $5, $');
 		my($fnl, $szl, $dtl) = (length($fn), length($sz), length($dt));
@@ -1123,8 +1119,15 @@ sub DirSlotN {
 		my($fnl, $szl, $dtl) = (length($fn), length($sz), length($dt));
 		my($fmt) = "%-". $fnl ."s%s%-". $szl ."s%s%-". $dtl ."s%s";
 		$_ = sprintf($fmt, "", $a, "", $c, "", $rem);
+	    } elsif (/(\s*\d+)(\s+\S+\s+)(\d+)(\s+<no date>)/i) {
+		# 32771  -rw-            24520                    <no date>  underlying-config
+		my($fn, $a, $sz, $dt, $rem) = ($1, $2, $3, $4, $');
+		my($fnl, $szl) = (length($fn), length($sz));
+		my($fmt) = "%-". $fnl ."s%s%-". $szl ."s%s%s";
+		$_ = sprintf($fmt, "", $a, "", $dt, $rem);
 	    }
-	}
+	} elsif (/(running-config-archive-)\S+\s*$/) {
+	    my($arc) = $1;
 
 	# filter frequently changing files of the config archive feature
 	# change from:
@@ -1133,8 +1136,6 @@ sub DirSlotN {
 	# to:
 	#       -rw-                                   running-config-archive-Jul--1-16-50-27.123-113
 	#       -rw-                                           running-config-archive-Jul--1-16-50-27.123-113
-	if (/(running-config-archive-)\S+\s*$/) {
-	    my($arc) = $1;
 	    if (/(\s*\d+)(\s+\S+\s+)(\d+)(\s+)(\w+ \d+\s+\d+ \d+:\d+:\d+ .\d+:\d+)/) {
 		my($fn, $a, $sz, $c, $dt, $rem) = ($1, $2, $3, $4, $5, $');
 		my($fnl, $szl, $dtl) = (length($fn), length($sz), length($dt));
@@ -1145,6 +1146,19 @@ sub DirSlotN {
 		my($fnl, $szl, $dtl) = (length($fn), length($sz), length($dt));
 		my($fmt) = "%-". $fnl ."s%s%-". $szl ."s%s%-". $dtl ."s%s%s\n";
 		$_ = sprintf($fmt, "", $a, "", $c, "", $arc, "<removed>");
+	    }
+	} else {
+	    # drop file number (from the various formats):
+	    #     3  -rw-             1011                    <no date>  ifIndex-table
+	    #    9  -rw-         660  Jan 15 2011 20:43:54 vlan.dat
+	    #   16  -rw-             5437  Jan 16 2016 02:22:32 +00:00  licenses
+	    if (/(\s*\d+)(\s+\S+\s+\d+\s+\w+ \d+\s+\d+ \d+:\d+:\d+ .\d+:\d+)/ ||
+	        /(\s*\d+)(\s+\S+\s+\d+\s+\w+ \d+\s+\d+ \d+:\d+:\d+)/ ||
+	        /(\s*\d+)(\s+\S+\s+\d+\s+<no date>\s+\S+)/) {
+		my($fn, $a, $rem) = ($1, $2, $');
+		my($fnl) = length($fn);
+		my($fmt) = "%-". $fnl ."s%s%s\n";
+		$_ = sprintf($fmt, "", $a, $rem);
 	    }
 	}
 
